<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/version">
        <Preference android:title="@string/github_java">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/Boolleanl/nfc-example" />
        </Preference>
        <Preference android:title="@string/github_kotlin">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/jeffreystoke/nfc-example" />
        </Preference>
        <Preference android:title="@string/donate">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="alipayqr://platformapi/startapp?saId=10000007&amp;qrcode=https://qr.alipay.com/TSX06511IXXRJJTBUAAOC0" />
        </Preference>
        <Preference android:title="@string/open_source">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://www.apache.org/licenses/LICENSE-2.0" />
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>