<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/fragment_card_name"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/card_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/card_title_hint" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/fragment_card_number"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/card_card_no"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/card_card_no_hint" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/fragment_card_message"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/card_message"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/card_message_hint" />

    <Button
        android:id="@+id/card_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="28dp"
        android:layout_marginRight="28dp"
        android:text="@string/card_confirm_label" />
</LinearLayout>